--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "styled-components": "^5.2.0"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node server.js",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
